src/screens/home/Home.css
.container {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  padding-left: 20px;
  padding-top: 10px;
}

@media screen and (max-width: 600px) {
  .container {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    margin-left: 5px;
  }
}

